--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <!-- Latest compiled and minified CSS -->
+        <title>Chequechain, Scotiabank</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
+        <link rel = "Icon" href="assets/favicon.png">
     </head>
     <body>
         <div id ="root"></div>
